testdata/invalid/invalid_union_no_message_int.bop
union UsesImportUnion {
    1 -> struct UnionStruct{
        uint32 hello;
    }
    2 -> message UnionMessage{
        uint32 goodbye;
    }
}